# lab2

lab-2/: CMakeLists.txt
lab-2/tasks/: CMakeLists.txt
lab-2/tasks/ex1/: CMakeLists.txt  ex1.cpp  ex1.hpp
lab-2/tasks/ex2/: CMakeLists.txt  ex2.cpp  ex2.hpp
lab-2/tasks/ex3/: CMakeLists.txt  ex3.cpp  ex3.hpp
lab-2/tasks/ex4/: CMakeLists.txt  ex4.cpp  ex4.hpp
lab-2/tests/: CMakeLists.txt  ex1_test.cpp  ex2_test.cpp  ex3_test.cpp  ex4_test.cpp
